--- a/consoleoutput.ui
+++ b/consoleoutput.ui
@@ -46,7 +46,7 @@
     <item>
      <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>programOut</string>
+       <string>result</string>
       </property>
      </widget>
     </item>
